--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 .Header {
-  color: #443e3e;
-  text-shadow: 1px 1px 5px #fff;
+  color: #FFE81F;
+  text-shadow: #FC0 1px 0 10px;
 }
 /* write your parent styles in here for your App.js */
